Remove target="_blank"

--- a/website/index.html
+++ b/website/index.html
@@ -36,7 +36,7 @@
           <li><a href="#dictionary">辞書</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a target="_blank" href="https://github.com/misterT2525/HeadDictionary/"><i class="fa fa-github"></i> GitHub</a></li>
+          <li><a href="https://github.com/misterT2525/HeadDictionary/"><i class="fa fa-github"></i> GitHub</a></li>
         </ul>
       </div><!--/.navbar-collapse -->
     </div>
@@ -92,7 +92,7 @@
       <ul>
         <li>Java 8</li>
         <li>Spigot 1.8.8</li>
-        <li><a target="_blank" href="https://www.spigotmc.org/resources/protocollib.1997/">ProtocolLib 3.6.5</a></li>
+        <li><a href="https://www.spigotmc.org/resources/protocollib.1997/">ProtocolLib 3.6.5</a></li>
       </ul>
     </div>
 
