--- a/website/index.html
+++ b/website/index.html
@@ -91,9 +91,13 @@
       <h2>動作環境 <small>Requirements</small></h2>
       <ul>
         <li>Java 8</li>
-        <li>Spigot 1.8.8</li>
-        <li><a href="https://www.spigotmc.org/resources/protocollib.1997/">ProtocolLib 3.6.5</a></li>
+        <li>Spigot 1.9</li>
+        <li><a href="https://www.spigotmc.org/resources/protocollib.1997/">ProtocolLib 3.7.0-BETA</a></li>
       </ul>
+      <p>
+        上記の環境に合わせて作られていますが、それ以外の環境でも問題無く動く場合があります。<br>
+        CraftBukkit 1.8.8などでも問題無く動作するはずです。<br>
+      </p>
     </div>
 
     <div id="commands">
