--- a/website/index.html
+++ b/website/index.html
@@ -21,33 +21,7 @@
   <script src="//oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
 </head>
-<body data-spy="scroll" data-target="#navbar">
-  <nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">HeadDictionary</a>
-      </div>
-      <div id="navbar" class="navbar-collapse collapse">
-        <ul class="nav navbar-nav">
-          <li><a href="#top">HOME</a></li>
-          <li><a href="#screenshots">スクリーンショット</a></li>
-          <li><a href="#requirements">動作確認</a></li>
-          <li><a href="#commands">コマンド</a></li>
-          <li><a href="#dictionary">辞書</a></li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="https://github.com/misterT2525/HeadDictionary/"><i class="fa fa-github"></i> GitHub</a></li>
-        </ul>
-      </div><!--/.navbar-collapse -->
-    </div>
-  </nav>
-
+<body>
   <div id="top" class="jumbotron">
     <div class="container">
       <h1>HeadDictionary</h1>
